; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_lwlock.c_GetLWLockIdentifier.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_lwlock.c_GetLWLockIdentifier.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PG_WAIT_LWLOCK = common dso_local global i64 0, align 8
@LWLockTranchesAllocated = common dso_local global i64 0, align 8
@LWLockTrancheArray = common dso_local global i8** null, align 8
@.str = private unnamed_addr constant [10 x i8] c"extension\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @GetLWLockIdentifier(i64 %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* @PG_WAIT_LWLOCK, align 8
  %8 = icmp eq i64 %6, %7
  %9 = zext i1 %8 to i32
  %10 = call i32 @Assert(i32 %9)
  %11 = load i64, i64* %5, align 8
  %12 = load i64, i64* @LWLockTranchesAllocated, align 8
  %13 = icmp uge i64 %11, %12
  br i1 %13, label %20, label %14

14:                                               ; preds = %2
  %15 = load i8**, i8*** @LWLockTrancheArray, align 8
  %16 = load i64, i64* %5, align 8
  %17 = getelementptr inbounds i8*, i8** %15, i64 %16
  %18 = load i8*, i8** %17, align 8
  %19 = icmp eq i8* %18, null
  br i1 %19, label %20, label %21

20:                                               ; preds = %14, %2
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  br label %26

21:                                               ; preds = %14
  %22 = load i8**, i8*** @LWLockTrancheArray, align 8
  %23 = load i64, i64* %5, align 8
  %24 = getelementptr inbounds i8*, i8** %22, i64 %23
  %25 = load i8*, i8** %24, align 8
  store i8* %25, i8** %3, align 8
  br label %26

26:                                               ; preds = %21, %20
  %27 = load i8*, i8** %3, align 8
  ret i8* %27
}

declare dso_local i32 @Assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
